--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install shellcheck
         run: sudo apt-get update && sudo apt-get install -y shellcheck
@@ -75,10 +77,19 @@ jobs:
             sha256sum autosecure-*.tar.gz autosecure_*.deb autosecure-*.rpm > sha256sums.txt
           )
 
+      - name: Generate release notes with Release Drafter
+        id: drafter
+        uses: release-drafter/release-drafter@v6
+        with:
+          tag: ${{ github.ref_name }}
+          disable-releaser: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+          body: ${{ steps.drafter.outputs.body }}
           files: |
             dist/autosecure-*.tar.gz
             dist/autosecure_*.deb
