--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   contents: write
+  id-token: write
 
 jobs:
   release:
@@ -25,6 +26,9 @@ jobs:
           go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
           echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
 
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3.8.1
+
       - name: Validate
         run: |
           bash -n autosecure.sh
@@ -39,18 +43,6 @@ jobs:
           DIST_DIR="dist"
           RELEASE_TAG="${GITHUB_REF_NAME}"
           PKG_DIR="autosecure-${RELEASE_TAG}"
-          DEB_ARCH="$(dpkg --print-architecture)"
-          RPM_ARCH="$(uname -m)"
-
-          case "$RPM_ARCH" in
-            x86_64|aarch64) ;;
-            amd64) RPM_ARCH="x86_64" ;;
-            arm64) RPM_ARCH="aarch64" ;;
-            *)
-              echo "Unsupported RPM arch: $RPM_ARCH"
-              exit 1
-              ;;
-          esac
 
           mkdir -p "${DIST_DIR}/${PKG_DIR}"
           cp autosecure.sh README.md LICENSE.md "${DIST_DIR}/${PKG_DIR}/"
@@ -58,24 +50,61 @@ jobs:
           TAR_NAME="autosecure-${RELEASE_TAG}.tar.gz"
           tar -czf "${DIST_DIR}/${TAR_NAME}" -C "${DIST_DIR}" "${PKG_DIR}"
 
-          sed -e "s/__VERSION__/${VERSION}/g" \
-              -e "s/__ARCH_RPM__/${RPM_ARCH}/g" \
-              packaging/nfpm.yaml > "${DIST_DIR}/nfpm.yaml"
+          # Build package variants for major Linux CPU architectures.
+          for DEB_ARCH in amd64 arm64; do
+            case "$DEB_ARCH" in
+              amd64) RPM_ARCH="x86_64" ;;
+              arm64) RPM_ARCH="aarch64" ;;
+              *)
+                echo "Unsupported deb arch: $DEB_ARCH"
+                exit 1
+                ;;
+            esac
 
-          nfpm package \
-            --config "${DIST_DIR}/nfpm.yaml" \
-            --packager deb \
-            --target "${DIST_DIR}/autosecure_${VERSION}_${DEB_ARCH}.deb"
+            sed -e "s/__VERSION__/${VERSION}/g" \
+                -e "s/__ARCH__/${DEB_ARCH}/g" \
+                packaging/nfpm.yaml > "${DIST_DIR}/nfpm-deb-${DEB_ARCH}.yaml"
 
-          nfpm package \
-            --config "${DIST_DIR}/nfpm.yaml" \
-            --packager rpm \
-            --target "${DIST_DIR}/autosecure-${VERSION}-1.${RPM_ARCH}.rpm"
+            nfpm package \
+              --config "${DIST_DIR}/nfpm-deb-${DEB_ARCH}.yaml" \
+              --packager deb \
+              --target "${DIST_DIR}/autosecure_${VERSION}_${DEB_ARCH}.deb"
+
+            sed -e "s/__VERSION__/${VERSION}/g" \
+                -e "s/__ARCH__/${RPM_ARCH}/g" \
+                packaging/nfpm.yaml > "${DIST_DIR}/nfpm-rpm-${RPM_ARCH}.yaml"
+
+            nfpm package \
+              --config "${DIST_DIR}/nfpm-rpm-${RPM_ARCH}.yaml" \
+              --packager rpm \
+              --target "${DIST_DIR}/autosecure-${VERSION}-1.${RPM_ARCH}.rpm"
+          done
 
           (
             cd "${DIST_DIR}"
             sha256sum autosecure-*.tar.gz autosecure_*.deb autosecure-*.rpm > sha256sums.txt
           )
+
+      - name: Sign release artifacts (keyless)
+        run: |
+          set -euo pipefail
+          for artifact in dist/autosecure-*.tar.gz dist/autosecure_*.deb dist/autosecure-*.rpm; do
+            cosign sign-blob --yes "$artifact" \
+              --output-signature "${artifact}.sig" \
+              --output-certificate "${artifact}.pem"
+          done
+
+      - name: Verify signatures
+        run: |
+          set -euo pipefail
+          WORKFLOW_IDENTITY="https://github.com/${GITHUB_REPOSITORY}/.github/workflows/release.yml@refs/tags/${GITHUB_REF_NAME}"
+          for artifact in dist/autosecure-*.tar.gz dist/autosecure_*.deb dist/autosecure-*.rpm; do
+            cosign verify-blob "$artifact" \
+              --certificate "${artifact}.pem" \
+              --signature "${artifact}.sig" \
+              --certificate-identity "${WORKFLOW_IDENTITY}" \
+              --certificate-oidc-issuer "https://token.actions.githubusercontent.com"
+          done
 
       - name: Generate release notes with Release Drafter
         id: drafter
@@ -95,3 +124,9 @@ jobs:
             dist/autosecure_*.deb
             dist/autosecure-*.rpm
             dist/sha256sums.txt
+            dist/autosecure-*.tar.gz.sig
+            dist/autosecure-*.tar.gz.pem
+            dist/autosecure_*.deb.sig
+            dist/autosecure_*.deb.pem
+            dist/autosecure-*.rpm.sig
+            dist/autosecure-*.rpm.pem
