--- a/.github/workflows/homebrew-tap.yml
+++ b/.github/workflows/homebrew-tap.yml
@@ -4,6 +4,12 @@ on:
   release:
     types:
       - published
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: "Release tag to sync (for example: v1.2.3)"
+        required: true
+        type: string
 
 permissions:
   contents: read
@@ -11,7 +17,7 @@ permissions:
 jobs:
   update-tap:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.release.tag_name, 'v')
+    if: startsWith(github.event.release.tag_name || inputs.tag_name, 'v')
     steps:
       - name: Validate tap configuration
         run: |
@@ -29,7 +35,7 @@ jobs:
 
       - name: Update formula
         env:
-          TAG: ${{ github.event.release.tag_name }}
+          TAG: ${{ github.event.release.tag_name || inputs.tag_name }}
           SOURCE_REPO: ${{ github.repository }}
         run: |
           set -euo pipefail
